[workspace]
members = [
  "crates/influxive-child-svc",
  "crates/influxive-otel",
]

[workspace.dependencies]
dirs = "5"
flate2 = "1"
futures = "0.3"
hex-literal = "0.4"
influxdb = "0.7"
influxive-child-svc = { version = "0.0.1-alpha.2", path = "crates/influxive-child-svc" }
opentelemetry_api = { version = "0.20.0-beta.1", features = [ "metrics" ], package = "ts_opentelemetry_api" }
reqwest = "0.11"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
tokio = "1"
tracing = "0.1"
zip = "0.6"
