[workspace]
members = [
  "crates/influxive-core",
  "crates/influxive-writer",
  "crates/influxive-downloader",
  "crates/influxive-child-svc",
  "crates/influxive-otel-atomic-obs",
  "crates/influxive-otel",
  "crates/influxive",
]

resolver = "2"

[workspace.dependencies]
base64 = "0.22"
digest = "0.10"
dirs = "5"
flate2 = "1"
futures = "0.3"
hex = "0.4"
hex-literal = "0.4"
influxdb = "0.7"
influxive-core = { version = "0.0.2-alpha.1", path = "crates/influxive-core" }
influxive-writer = { version = "0.0.2-alpha.1", path = "crates/influxive-writer" }
influxive-downloader = { version = "0.0.2-alpha.1", path = "crates/influxive-downloader" }
influxive-child-svc = { version = "0.0.2-alpha.1", path = "crates/influxive-child-svc" }
influxive-otel = { version = "0.0.2-alpha.1", path = "crates/influxive-otel" }
influxive-otel-atomic-obs = { version = "0.0.2-alpha.1", path = "crates/influxive-otel-atomic-obs" }
opentelemetry_api = { version = "0.20.0", features = [ "metrics" ] }
reqwest = "0.12"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
tokio = "1"
tracing = "0.1"
zip = "2.1"
