[package]
name = "influxive-child-svc"
version = { workspace = true }
description = "Run influxd as a child process"
documentation = "https://docs.rs/influxive-child-svc"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
hex-literal = { workspace = true, optional = true }
influxive-core = { workspace = true }
influxive-writer = { workspace = true }
influxive-downloader = { workspace = true, optional = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[features]
default = ["download_binaries"]

# compiles in the ability to download release influxd and influx binaries
# as a fallback incase they are not found on the path
download_binaries = ["hex-literal", "influxive-downloader"]
