[package]
name = "influxive-core"
version = { workspace = true }
description = "Core types for influxive crates"
documentation = "https://docs.rs/influxive-core"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
