[package]
name = "influxive-downloader"
version = "0.0.1-alpha.3"
edition = "2021"
description = "Influxive system download utility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/influxive"
documentation = "https://docs.rs/influxive-downloader"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["metrics"]
categories = ["development-tools"]

[dependencies]
base64 = { workspace = true }
digest = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
influxive-core = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sha2 = { workspace = true }
zip = { workspace = true }
