[package]
name = "influxive-downloader"
version = { workspace = true }
description = "Influxive system download utility"
documentation = "https://docs.rs/influxive-downloader"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
base64 = { workspace = true }
digest = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
influxive-core = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sha2 = { workspace = true }
zip = { workspace = true }
