[package]
name = "influxive-otel-atomic-obs"
version = { workspace = true }
description = "Opentelemetry observable metric implementations based on std::sync::atomic types"
documentation = "https://docs.rs/influxive-otel-atomic-obs"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
opentelemetry_api = { workspace = true }
