[package]
name = "influxive-otel"
version = "0.0.1-alpha.1"
edition = "2021"
description = "Opentelemetry metrics bindings for influxive-child-svc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/influxive"
documentation = "https://docs.rs/influxive-otel"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["metrics"]
categories = ["development-tools"]

[dependencies]
influxive-child-svc = { workspace = true }
opentelemetry_api = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
