[package]
name = "influxive-otel"
version = "0.0.1-alpha.10"
edition = "2021"
description = "Opentelemetry metrics bindings for influxive-child-svc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/influxive"
documentation = "https://docs.rs/influxive-otel"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["metrics"]
categories = ["development-tools"]

[dependencies]
influxive-core = { workspace = true }
opentelemetry_api = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }

[dev-dependencies]
influxive-otel-atomic-obs = { workspace = true }
influxive-child-svc = { workspace = true }
influxive-writer = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
