[package]
name = "influxive-otel"
version = { workspace = true }
description = "Opentelemetry metrics bindings for influxive-child-svc"
documentation = "https://docs.rs/influxive-otel"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
influxive-core = { workspace = true }
opentelemetry_api = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
influxive-otel-atomic-obs = { workspace = true }
influxive-child-svc = { workspace = true }
influxive-writer = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
