[package]
name = "influxive-writer"
version = "0.0.2-alpha.1"
edition = "2021"
description = "Rust utility for efficiently writing metrics to a running InfluxDB instance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holochain/influxive"
documentation = "https://docs.rs/influxive-writer"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = ["metrics"]
categories = ["development-tools"]

[dependencies]
influxdb = { workspace = true }
influxive-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
