[package]
name = "influxive-writer"
version = { workspace = true }
description = "Rust utility for efficiently writing metrics to a running InfluxDB instance"
documentation = "https://docs.rs/influxive-writer"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
influxdb = { workspace = true }
influxive-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.20.0"
