[package]
name = "influxive"
version = { workspace = true }
description = "High-level Rust integration of opentelemetry metrics and InfluxDB"
documentation = "https://docs.rs/influxive"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
influxive-writer = { workspace = true }
influxive-child-svc = { workspace = true }
influxive-otel = { workspace = true }

[dev-dependencies]
opentelemetry_api = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
